--- a/index.html
+++ b/index.html
@@ -130,13 +130,17 @@
 
 <section class="radovi" id="radovi">
     <h2 class="naslov underline">Naši radovi</h2>
+    <div class="video-wrapper">
+        <button class="video-nav-left" id="prevVideo">
+            <ion-icon name="chevron-back-outline"></ion-icon>
+        </button>
 
     <div class="video-container">
 
         <div class="video-card">
             <span class="video-title">@maskote_lazarevac</span>
             <a href="https://instagram.com/reel/DFXT-Dqs1rf" target="_blank">
-            <video src="images/radovi/maskote.mp4" muted loop autoplay></video>
+            <video src="images/radovi/maskote.mp4" muted loop></video>
             <div class="video-loader"></div>
             </a> 
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -150,7 +154,7 @@
         <div class="video-card">
             <span class="video-title">@cmagency.marketing</span>
             <a href="https://instagram.com/reel/DFQh-Oqts6F" target="_blank">
-                <video src="images/radovi/agency.mp4" muted loop autoplay playsinline></video>
+                <video src="images/radovi/agency.mp4" muted loop playsinline></video>
                 <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -164,7 +168,7 @@
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
             <a href="https://instagram.com/reel/DHVz8j5xMXY" target="_blank">
-            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -178,7 +182,7 @@
         <div class="video-card">
             <span class="video-title">@lukaxcvetkovic</span>
             <a href="https://instagram.com/reel/C3DW0c9tzpS" target="_blank">
-            <video src="images/radovi/tutz_brix.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/tutz_brix.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -192,7 +196,7 @@
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
             <a href="https://instagram.com/reel/DHinZOPMQQf/" target="_blank">
-            <video src="images/radovi/kiroprakticno_noga.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/kiroprakticno_noga.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -206,7 +210,7 @@
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
             <a href="https://instagram.com/reel/DHgmsH0MUOm/" target="_blank">
-            <video src="images/radovi/kiroprakticno_kicma.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/kiroprakticno_kicma.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -220,7 +224,7 @@
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
             <a href="https://instagram.com/reel/DHYwbW9MjKm/" target="_blank">
-            <video src="images/radovi/kiroprakticno_spavanje.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/kiroprakticno_spavanje.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -234,7 +238,7 @@
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
             <a href="https://instagram.com/reel/DHVz8j5xMXY/" target="_blank">
-            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -248,7 +252,7 @@
         <div class="video-card">
             <span class="video-title">@lukaxcvetkovic</span>
             <a href="https://www.instagram.com/reel/C3lFASENYXZ/" target="_blank">
-            <video src="images/radovi/tutz_patch.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/tutz_patch.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -260,6 +264,10 @@
         </div>
     </div>
 
+    <button class="video-nav-right" id="nextVideo">
+        <ion-icon name="chevron-forward-outline"></ion-icon>
+    </button>
+    </div>
 </section>
 
 <section class="testimonial" id="testimonial">
