Obavestenje za ucitavanje liste

--- a/portal.html
+++ b/portal.html
@@ -70,7 +70,7 @@
           <button class="unselectable" id="addItemBtn" onclick="addItem()">Dodaj</button>
           <!-- LISTA -->
           <h2 class="unselectable" id="lista">Lista</h2>
-          <p class="unselectable" id="counter">Ukupno stavki: 0</p>
+          <p class="unselectable" id="counter">Ucitavanje...</p>
           <input list="filterCategoryList" id="filterCategoryInput" placeholder="Filtriraj po kategoriji">
           <datalist id="filterCategoryList"></datalist>
           <button class="unselectable" id="btn2" onclick="filterItems()">Filtriraj</button>
