--- a/portal.html
+++ b/portal.html
@@ -81,7 +81,7 @@
         <div class="button-group unselectable">  
           <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
           <button id="btn4" onclick="refreshPortal()"><ion-icon name="refresh-circle-outline"></ion-icon></button>
-          <button id="btn4"><ion-icon name="planet-outline"></ion-icon></button>
+          <button id="btn4" class="language-display-toggle" onclick="changeDisplayLang()"><ion-icon name="planet-outline"></ion-icon></button>
           <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
         </div>
         </div>
