Menjanje jezika fixevi

--- a/portal.html
+++ b/portal.html
@@ -34,7 +34,7 @@
 
         <div class="obavestenje hidden">
             <h2>Važno obaveštenje</h2>
-            <p>Opcija za prebacivanje jezika leadsova je dodata na portal, ali trenutno nije u funkciji. Radimo na implementaciji i uskoro će biti dostupna. Hvala na razumevanju!</p>
+            <p>Promena jezika leadsova je dodata na portal. Menjanje jezika se dogadja klikom na planetu dole. Ukoliko nadjete neki problem obavestite nas(me)</p>
             <button class="unselectable" onclick="showPortal()">Razumem</button>
         </div>
     </div>
