Prebacivanje jezika leadsova part 4

--- a/portal.html
+++ b/portal.html
@@ -65,7 +65,7 @@
           <input type="text" id="textInput" placeholder="Unesi naziv ili link">
           <div id="ctgroup">
             <input list="categoryList" id="categoryInput" placeholder="Unesi ili izaberi kategoriju">
-            <button id="languageBtn" class="language-toggle">SRB</button>
+            <button id="languageBtn" class="language-toggle">ENG</button>
         </div>
 
           <datalist id="categoryList"></datalist>
