--- a/portal.html
+++ b/portal.html
@@ -34,9 +34,7 @@
 
         <div class="obavestenje hidden">
             <h2>Važno obaveštenje</h2>
-            <p>Promena jezika leadova je dodata na portal, a menjanje jezika vrši se klikom na ikonu planete u dnu stranice. 
-            Problemi na portalu navedeni su na ovom <a href="https://notion.so/1cf1317b1815806f855cca14cc55d06f?v=1cf1317b181580b3a6d9000cf2c8091d&pvs=4">linku</a>. 
-            Ukoliko uočite dodatne poteškoće, možete ostaviti komentar <a href="https://notion.so/1cf1317b1815806f855cca14cc55d06f?v=1cf1317b181580b3a6d9000cf2c8091d&pvs=4">ovde</a>.</p>
+            <p>Nakon prijave na portal neophodno je odmah osvežiti stranicu. Promena jezika leadova je omogućena na portalu. Menjanje jezika vrši se klikom na dugme ENG/SRB u okviru sekcije „Dodaj“. Prijavljivanje problema je važno i obavlja se klikom na dugme „Prijavi problem“.</p>
             <button class="unselectable" onclick="showPortal()">Razumem</button>
         </div>
     </div>
