Popravka svih gresaka konacno

--- a/portal.html
+++ b/portal.html
@@ -34,7 +34,7 @@
 
         <div class="obavestenje hidden">
             <h2>Važno obaveštenje</h2>
-            <p>Nakon prijave na portal neophodno je odmah osvežiti stranicu. Promena jezika leadova je omogućena na portalu. Menjanje jezika vrši se klikom na dugme ENG/SRB u okviru sekcije „Dodaj“. Prijavljivanje problema je važno i obavlja se klikom na dugme „Prijavi problem“.</p>
+            <p>Promena jezika leadova je omogućena na portalu. Menjanje jezika vrši se klikom na dugme ENG/SRB u okviru sekcije „Dodaj“. Prijavljivanje problema je važno i obavlja se klikom na dugme „Prijavi problem“.</p>
             <button class="unselectable" onclick="showPortal()">Razumem</button>
         </div>
     </div>
