Privacy policy and terms of service

--- a/index.html
+++ b/index.html
@@ -568,10 +568,10 @@
         <div class="column">
             <h4>Quick Links</h4>
             <ul>
-                <li><a href="#">Uskoro</a></li>
-                <li><a href="#">Uskoro</a></li>
-                <li><a href="#">Uskoro</a></li>
-                <li><a href="#">Uskoro</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="posao.html">Posao</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
             </ul>
         </div>
 
