Faq and work at company

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#usluge">Usluge</a></li>
         <li><a href="#radovi">Radovi</a></li>
         <li><a href="#kontakt">Kontakt</a></li>        
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#blog">Blog</a></li>
         <li><a href="portal.html" class="btn">Prijavi se <ion-icon name="log-in-outline"></ion-icon></a></li>
         <li><button id="theme-toggle">🌙</button></li>
     </ul>
@@ -561,7 +561,7 @@
                 <li><a href="#usluge">Usluge</a></li>
                 <li><a href="#radovi">Radovi</a></li>
                 <li><a href="#kontakt">Kontakt</a></li>        
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#blog">Blog</a></li>
             </ul>
         </div>
 
