--- a/postovi.html
+++ b/postovi.html
@@ -105,7 +105,7 @@
     <div class="container">
 
         <div class="footer-logo">
-            <a href="#" class="logo"><img src="../images/logo.png">CM Agency</a>
+            <a href="#" class="logo"><img src="images/logo.png">CM Agency</a>
             <p>Helping businesses grow through web design, development, and digital marketing.</p>
             <div class="social-icons">
                 <a href="https://instagram.com/cmagency.marketing">
@@ -116,22 +116,23 @@
         </div>
 
         <div class="column">
-            <h4>Home page</h4>
+            <h4>Osnovni linkovi</h4>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Features</a></li>
-                <li><a href="index.html">Blog</a></li>
+                <li><a href="#about">O nama</a></li>
+                <li><a href="#usluge">Usluge</a></li>
+                <li><a href="#radovi">Radovi</a></li>
+                <li><a href="#kontakt">Kontakt</a></li>        
+                <li><a href="#blog">Blog</a></li>
             </ul>
         </div>
 
         <div class="column">
             <h4>Quick Links</h4>
             <ul>
-                <li><a href="#">Uskoro</a></li>
-                <li><a href="#">Uskoro</a></li>
-                <li><a href="#">Uskoro</a></li>
-                <li><a href="#">Uskoro</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="posao.html">Posao</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
             </ul>
         </div>
 
