--- a/terms.html
+++ b/terms.html
@@ -76,7 +76,7 @@
                 <li><a href="#usluge">Usluge</a></li>
                 <li><a href="#radovi">Radovi</a></li>
                 <li><a href="#kontakt">Kontakt</a></li>        
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#blog">Blog</a></li>
             </ul>
         </div>
 
