Faq text update

--- a/faq.html
+++ b/faq.html
@@ -28,27 +28,39 @@
     <section class="faq-category">
         <h2>Opšta pitanja o agenciji</h2>
         <div class="faq-item">
-            <button class="faq-question">Ko je CM Agency?</button>
+            <button class="faq-question">Ko smo mi?</button>
             <div class="faq-answer">
-                <p>Mi smo digitalna agencija specijalizovana za web dizajn, razvoj, digitalni marketing i SEO.</p>
+            <p>Mi smo digitalna agencija koja nudi sveobuhvatna rešenja za online prisustvo. Specijalizovani smo za:
+            <ul>
+                <li>Produkciju kratkih video formata (short-form video)</li>
+                <li>Profesionalnu video i foto obradu (editovanje)</li>
+                <li>Vođenje društvenih mreža</li>
+                <li>Razvoj i optimizaciju Business Manager naloga</li>
+                <li>Strategije digitalnog marketinga</li>
+                <li>SEO optimizaciju za bolje rangiranje na pretraživačima</li>
+            </ul>
+            </p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Koje usluge nudite?</button>
             <div class="faq-answer">
-                <p>Nudimo izradu web sajtova (responzivnih, e-commerce), SEO optimizaciju, upravljanje društvenim mrežama, Google Ads i content marketing.</p>
+                <p>Nudimo kompletnu digitalnu podršku koja obuhvata izradu web sajtova (responzivnih, e-commerce, landing stranica), SEO optimizaciju, upravljanje društvenim mrežama, Google Ads i Meta Ads kampanje, produkciju kratkih video formata (short-form video), profesionalno fotografisanje, video i foto obradu (editovanje) i razvoj Business Manager naloga.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Zašto da izaberem vas?</button>
             <div class="faq-answer">
-                <p>Nudimo kreativna, efikasna i prilagođena rešenja za online rast vašeg poslovanja, uz podršku i transparentnost.</p>
+                <p>Izaberite nas jer vam nudimo sve na jednom mestu i to sa merljivim rezultatima. Ne gubite vreme i resurse koordinirajući sa više agencija.
+                <br>Naš tim stručnjaka pokriva sve aspekte digitalnog prisustva: od izrade sajta i SEO-a, preko vođenja društvenih mreža i plaćenih kampanja, do produkcije vrhunskog video i foto sadržaja.
+                <br>Fokusirani smo na vaš rast i prilagođavamo strategije vašim jedinstvenim potrebama.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Kako početi saradnju?</button>
             <div class="faq-answer">
-                <p>Jednostavno nas kontaktirajte putem emaila ili kontakt forme. Razgovaraćemo o vašim potrebama i predložiti najbolje rešenje.</p>
+                <p>Pošaljite nam email ili popunite kontakt formu na našem sajtu. Ubrzo ćemo vam se javiti da razgovaramo o vašim specifičnim potrebama i predložimo najbolje rešenje za ostvarivanje vaših poslovnih ciljeva.
+                <br>Spremni smo da vaše ideje pretvorimo u digitalni uspeh!</p>
             </div>
         </div>
     </section>
@@ -58,31 +70,39 @@
         <div class="faq-item">
             <button class="faq-question">Koliko traje izrada sajta?</button>
             <div class="faq-answer">
-                <p>Zavisi od složenosti. Jednostavni sajtovi su gotovi za 2-4 nedelje, dok kompleksniji projekti traju 6-12 nedelja.</p>
+                <p><b>Trajanje izrade sajta zavisi od složenosti i vaših potreba.</b>
+                <ul>
+                    <li>Za jednostavan sajt (vizit karta/portfolio), to može biti <b>5-10 dana</b>.</li>
+                    <li>Za kompleksnije sajtove (korporativni/e-commerce) je obično <b>2-3 nedelje</b> i duže.</li>
+                </ul>
+                <br>Brzina zavisi i od spremnosti sadržaja (tekst, slike) i vaše povratne informacije. Važno nam je da isporučimo kvalitetno rešenje, a ne samo brzo.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Da li su sajtovi prilagođeni za mobilne uređaje?</button>
             <div class="faq-answer">
-                <p>Apsolutno! Svi naši sajtovi su "responzivni", što znači da se automatski prilagođavaju svim ekranima (telefoni, tableti, desktop).</p>
+                <p><b>Naravno! Svi sajtovi koje izrađujemo su potpuno responsivni.</b><br>To znači da se automatski prilagođavaju veličini ekrana na kojem se pregledaju - bilo da je u pitanju mobilni telefon, tablet ili desktop računar. Vaš sajt će uvek izgledati odlično i biti funkcionalan, pružajući optimalno korisničko iskustvo svim posetiocima.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Mogu li sam ažurirati sadržaj sajta?</button>
             <div class="faq-answer">
-                <p>Da, većina naših sajtova se pravi na CMS platformama (kao što je WordPress), koje vam omogućavaju lako samostalno ažuriranje.</p>
+                <p><b>Ne, ne nudimo klijentima mogućnost samostalnog ažuriranja sadržaja sajta.</b>
+                <br>Sav sadržaj (tekst, slike, video) koji želite da se ažurira na vašem sajtu šaljete nama, a mi ćemo ga u jako kratkom roku objaviti za vas. Na taj način osiguravamo da je sajt uvek profesionalno ažuriran i funkcionalan.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Da li nudite održavanje sajta?</button>
             <div class="faq-answer">
-                <p>Da, nudimo pakete održavanja koji uključuju bezbednosna ažuriranja, tehničku podršku i backup podataka.</p>
+                <p><b>Da, nudimo usluge održavanja sajta.</b> 
+                <br>To uključuje redovne provere, sigurnosna ažuriranja i tehničku podršku, osiguravajući da je vaš sajt uvek bezbedan, brz i funkcionalan. Vama preostaje samo da se fokusirate na svoj biznis.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Da li kreirate e-commerce (online prodavnice)?</button>
             <div class="faq-answer">
-                <p>Da, razvijamo sigurne i funkcionalne online prodavnice, spremne za prihvat plaćanja i upravljanje porudžbinama.</p>
+                <p><b>Da, kreiramo e-commerce sajtove, odnosno online prodavnice.</b>
+                <br>Razvijamo kompletna rešenja za online prodaju, koja uključuju sve što vam je potrebno da uspešno poslujete: od preglednog kataloga proizvoda, sigurnog sistema plaćanja, do integracije sa dostavnim službama. Omogućavamo vam da efikasno prodate svoje proizvode ili usluge putem interneta.</p>
             </div>
         </div>
     </section>
@@ -92,31 +112,47 @@
         <div class="faq-item">
             <button class="faq-question">Šta je SEO i zašto je važan?</button>
             <div class="faq-answer">
-                <p>SEO (optimizacija za pretraživače) pomaže vašem sajtu da se pojavi visoko u rezultatima pretrage (npr. Google), dovodeći više posetilaca.</p>
+                <p>SEO (Search Engine Optimization) je optimizacija vašeg sajta kako bi se bolje rangirao u besplatnim rezultatima pretrage na Google-u. Cilj je da vas korisnici lakše pronađu kada traže vaše usluge ili proizvode.
+                <br><b>Zašto je važan?</b>
+                <ul>
+                    <li>Povećava vidljivost: Više rangiranje znači da će vas više ljudi videti.</li>
+                    <li>Dovodi kvalitetne posetioce: Privlači korisnike koji aktivno traže ono što nudite.</li>
+                    <li>Dugoročna investicija: Donosi besplatan i stalan promet, za razliku od plaćenih oglasa.</li>
+                    <li>Gradi poverenje: Sajtovi na vrhu pretrage deluju pouzdanije.</li>
+                    <li>Konkurentska prednost: Pomaže vam da se istaknete i budete pronađeni pre konkurencije.</li>
+                </ul>
+                </p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Da li radite Google Ads kampanje?</button>
             <div class="faq-answer">
-                <p>Da, kreiramo i optimizujemo Google Ads kampanje kako biste brzo dosegli ciljanu publiku i ostvarili konverzije.</p>
+                <p><b>Da, radimo Google Ads kampanje.</b>
+                <br>Kreiramo, optimizujemo i vodimo plaćene Google Ads kampanje kako bismo osigurali da se vaši proizvodi ili usluge prikazuju potencijalnim klijentima u trenutku kada ih aktivno traže. To vam donosi brze i merljive rezultate u vidu većeg broja poseta sajtu, upita ili prodaja.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Upravljate li društvenim mrežama?</button>
             <div class="faq-answer">
-                <p>Da, nudimo kompletno upravljanje profilima na društvenim mrežama (Instagram, Facebook, TikTok), kreiranje sadržaja i kampanje.</p>
+                <p><b>Da, upravljamo društvenim mrežama za naše klijente.</b>
+                <br>Nudimo kompletno vođenje vaših profila na društvenim mrežama, što uključuje kreiranje strategije, izradu engaging sadržaja (tekstovi, slike, video), redovno objavljivanje, komunikaciju sa pratiocima i analizu performansi. Cilj nam je da izgradimo snažno prisustvo vašeg brenda i povežemo vas sa vašom ciljnom grupom.
+                </p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Šta je Content Marketing?</button>
             <div class="faq-answer">
-                <p>Content Marketing je kreiranje i distribucija vrednog sadržaja (blogovi, članci, video snimci) za privlačenje i zadržavanje publike.</p>
+                <p><b>Content Marketing je strateški pristup kreiranju i distribuciji vrednog i relevantnog sadržaja </b>(npr. blogovi, videi, objave na mrežama).
+                <br>
+                Cilj je da se privuče i zadrži publika tako što ih edukujete ili zabavljate, umesto da im direktno prodajete. Kroz to se gradi poverenje i autoritet, što dugoročno dovodi do konverzija i poslovnog rasta.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Kako pratim rezultate kampanja?</button>
             <div class="faq-answer">
-                <p>Redovno vam dostavljamo detaljne izveštaje o performansama kampanja i napretku ka vašim ciljevima.</p>
+                <p><b>Sve kampanje pratimo detaljno koristeći Google Analytics, Google Ads, Meta Ads i druge specijalizovane alate.</b>
+                <br>
+                Redovno analiziramo podatke i dostavljamo vam jasne izveštaje. Na osnovu toga optimizujemo kampanje kako bismo osigurali maksimalne rezultate i povrat vaše investicije.</p>
             </div>
         </div>
     </section>
@@ -126,25 +162,37 @@
         <div class="faq-item">
             <button class="faq-question">Kako formirate cene?</button>
             <div class="faq-answer">
-                <p>Cene se formiraju individualno, na osnovu složenosti projekta, opsega usluga i specifičnih zahteva klijenta.</p>
+                <p><b>Cene formiramo individualno, na osnovu složenosti i obima projekta.</b>
+                <br>U obzir uzimamo tip usluge, kompleksnost, potrebne resurse i vremenski okvir. Da bismo vam dali preciznu i personalizovanu ponudu, najbolje je da nas kontaktirate sa detaljima vaših potreba.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Da li nudite pakete usluga?</button>
             <div class="faq-answer">
-                <p>Da, imamo predefinisane pakete, ali smo fleksibilni i možemo kreirati paket prilagođen vašim potrebama i budžetu.</p>
+                <p><b>Da, nudimo pakete usluga.</b>
+                <br>Razumemo da različiti biznisi imaju različite potrebe, zato smo kreirali pakete usluga koji kombinuju više naših rešenja. Ovi paketi su često isplativiji od pojedinačnog angažovanja usluga.
+                <br>
+                Za više informacija o paketima koji bi najbolje odgovarali vašim ciljevima i budžetu, kontaktirajte nas. Rado ćemo vam predstaviti dostupne opcije i pomoći da pronađete idealno rešenje.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Koji su načini plaćanja?</button>
             <div class="faq-answer">
-                <p>Prihvatamo bankovni transfer. Detalji se dogovaraju pre početka projekta.</p>
+                <p><b>Nudimo vam fleksibilne opcije plaćanja kako bismo vam olakšali saradnju.</b> <br>Prihvatamo:
+                <ul>
+                    <li>Paypal</li>
+                    <li>Bankovni transfer (uplata na račun)</li>
+                    <li>Gotovinsko plaćanje</li>
+                </ul>
+                <br>Za veće projekte ili dugoročne saradnje, moguć je i dogovor o dinamici plaćanja po fazama projekta ili na mesečnom nivou, uz avansnu uplatu. Sve detalje dogovorićemo prilikom sklapanja saradnje.</p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Da li tražite avans?</button>
             <div class="faq-answer">
-                <p>Obično zahtevamo avans pre početka rada, a ostatak se plaća po fazama projekta ili po završetku.</p>
+                <p><b>Da, tražimo avans.</b>
+                <br>Standardna praksa je avansna uplata od 50% pre početka rada na projektu. Ostatak iznosa se plaća po završetku i vašem odobrenju.
+                <br>Ovo nam omogućava da pokrijemo početne troškove i osiguramo posvećenost projektu.</p>
             </div>
         </div>
     </section>
