Fonts change & javascript improvement

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body class="unselectable" id="top">
 
 <header>
-    <a href="#" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
+    <a href="#top" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
     <button class="hamburger" aria-label="Toggle navigation">
         <ion-icon name="menu-outline"></ion-icon>
     </button>
@@ -59,8 +58,8 @@
             Sa fokusom na dizajn prilagođen korisnicima i efikasne marketinške strategije, CM agencija osigurava da vaš brend zasija u digitalnom svetu. Naše prilagođene usluge osmišljene su tako da unaprede vaše poslovanje i uspostave snažnu povezanost sa vašom ciljnom publikom.
             </p>
             <ul>
-                <li><h1>2+</h1><p>Zadovoljnih<br>klijenta</p></li>
-                <li><h1>5+</h1><p>Pokrenutih<br>projekata</p></li>
+                <li><h1>5+</h1><p>Aktivnih<br>Klijenata</p></li>
+                <li><h1>50+</h1><p>Zavrsenih<br>projekata</p></li>
                 <li><h1>2+</h1><p>Godina<br>iskustva</p></li>
             </ul>
         </div>
@@ -282,53 +281,53 @@
 
     <div class="testimonial-item active">
         <div class="testimonial-video">
-            <video src="images/radovi/agency.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/selena.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
 
         <div class="testimonial-content">
             <div class="testimonial-header">
-                <img src="images/logo.png" class="testimonial-logo" alt="Logo">
-                <div><h1 class="testimonial-title">CM Agency</h1></div>
+                <img src="images/klijenti/selena.jpg" class="testimonial-logo" alt="Logo">
+                <div><h1 class="testimonial-title">Nails by Selena</h1></div>
             </div>
             <p class="testimonial-text">
-                "Saradnja sa CM Agencijom bila je pravo otkriće. Njihov tim je odmah shvatio naše potrebe i pružio rešenja koja su podigla naše online prisustvo na potpuno novi nivo. Kreativnost, profesionalizam i stalna podrška tokom celog procesa učinili su nas sigurnima da su pravi partner za nas. Rezultati koje su doneli su bili iznad svih očekivanja, i svakako bismo ih preporučili svima koji žele ozbiljan rast"
+                "Saradnja sa CM Agencijom je bila super iskustvo! Odmah su skapirali šta nam treba i ponudili rešenja koja su nam digla online prisustvo na viši nivo. Ekipa je kreativna, profesionalna i uvek tu za podršku. Osećali smo se sigurno s njima. Rezultati su stvarno nadmašili očekivanja, preporučujemo ih svima koji hoće ozbiljan napredak!"
             </p>
         </div>
     </div>
 
     <div class="testimonial-item">
         <div class="testimonial-video">
-            <video src="images/radovi/tutz_windows.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/kiroprakticno_spavanje.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
 
         <div class="testimonial-content">
             <div class="testimonial-header">
-                <img src="images/tutz.png" class="testimonial-logo" alt="Logo">
-                <div><h1 class="testimonial-title">Tutz</h1></div>
+                <img src="images/klijenti/kiroprakticno.jpg" class="testimonial-logo" alt="Logo">
+                <div><h1 class="testimonial-title">Kiroprakticno</h1></div>
             </div>
             <p class="testimonial-text">
-                "Saradnja sa CM Agencijom bila je prava odluka za moj brend. Tim je od početka shvatio šta mi je potrebno i pružio rešenja koja su podigla moj kanal na novi nivo. Njihov pristup je potpuno profesionalan, a kreativnost i pažnja koju posvećuju svakom detalju čine ih zaista posebnim. Uz njihovu pomoć, postigao sam značajan rast publike i unapredio svoj online imidž. CM Agencija je definitivno partner koji svako strimovanje treba da ima!"
+                "CM Agencija? Pun pogodak! Odmah su ušli u štos sa mojim kanalom i doneli ideje koje su ga gurnule napred. Ekipa je totalno profesionalna, a kreativnost i posvećenost detaljima su im top. Uz njih sam skroz digao publiku i popravio online sliku. Ako strimuješ, oni su obavezan partner!"
             </p>
         </div>
     </div>
 
     <div class="testimonial-item">
         <div class="testimonial-video">
-            <video src="images/radovi/tutz_brix.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/mwp.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
         <div class="testimonial-content">
             <div class="testimonial-header">
-                <img src="images/mwp.png" class="testimonial-logo" alt="Logo">
+                <img src="images/klijenti/mwp.png" class="testimonial-logo" alt="Logo">
                 <div><h1 class="testimonial-title">Milan Web Portal</h1></div>
             </div>
             <p class="testimonial-text">
-                "Saradnja sa CM Agency bila je fantastična! Tim je brzo razumeo naše potrebe i dostavio rešenja koja su unapredila naš online nastup. Kreativnost i stručnost koje su pokazali u dizajnu i marketingu su zaista na visokom nivou. Uz njihovu pomoć, naš brand je dobio novu dimenziju, a rezultati su počeli da pristižu gotovo odmah. Preporučujemo CM Agency svakome ko traži profesionalnost, kreativnost i stvarne rezultate."
+                "Izuzetno smo zadovoljni saradnjom sa CM Agencijom. Njihov tim je pokazao izuzetno razumevanje naših poslovnih ciljeva i implementirao rešenja koja su značajno poboljšala naše prisustvo na tržištu. Posebno cenimo njihovu inovativnost i efikasnost u pristupu. Preporučujemo CM Agenciju kao pouzdanog partnera za digitalni marketing."
             </p>
         </div>
     </div>
