--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <ul>
                 <li><h1>5+</h1><p>Aktivnih<br>Klijenata</p></li>
                 <li><h1>50+</h1><p>Zavrsenih<br>projekata</p></li>
-                <li><h1>2+</h1><p>Godina<br>iskustva</p></li>
+                <li><h1>2+</h1><p>Godine<br>iskustva</p></li>
             </ul>
         </div>
     </div>
