Sitemap and SEO

--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
 <head>
   <meta charset="UTF-8">
   <meta name="theme-color" content="#f5f4f2">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Primarni meta podaci -->
   <title>CM Agency</title>
-  <link rel="icon" type="image/x-icon" href="images/logo.png">
+  <meta name="description" content="CM Agency nudi digitalni marketing, izradu sajtova, SEO optimizaciju, video produkciju, dizajn logotipa i strategije za rast vašeg brenda. Kontaktirajte nas za moderna i efikasna marketinška rešenja.">
+  <meta name="keywords" content="digitalni marketing, web dizajn, izrada sajtova, SEO Srbija, video produkcija, logo dizajn, marketing agencija Srbija, social media, marketing strategija">
+  <meta name="author" content="CM Agency">
+  <meta name="robots" content="index, follow">
+  <link rel="icon" type="image/png" href="images/logo.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="canonical" href="https://cmagency.netlify.app" />
+  <!-- Open Graph za društvene mreže -->
+  <meta property="og:title" content="CM Agency | Digitalni Marketing i Web Dizajn">
+  <meta property="og:description" content="Kompletna usluga digitalnog marketinga: sajtovi, SEO, dizajn, video. Povećajte vidljivost uz CM Agency.">
+  <meta property="og:image" content="https://i.postimg.cc/qMjCKkRd/cmagency.png">
+  <meta property="og:url" content="https://cmagency.netlify.app">
+  <meta property="og:type" content="website">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="CM Agency | Digitalni Marketing i Web Dizajn">
+  <meta name="twitter:description" content="CM Agency nudi profesionalne usluge digitalnog marketinga, SEO optimizacije i web dizajna.">
+  <meta name="twitter:image" content="https://i.postimg.cc/qMjCKkRd/cmagency.png">
 </head>
-<body class="unselectable" id="top">
 
 <header>
     <a href="#top" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
