--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="theme-color" content="#f5f4f2">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Primarni meta podaci -->
+  <!-- Primarni podaci -->
   <title>CM Agency</title>
   <meta name="description" content="CM Agency nudi digitalni marketing, izradu sajtova, SEO optimizaciju, video produkciju, dizajn logotipa i strategije za rast vašeg brenda. Kontaktirajte nas za moderna i efikasna marketinška rešenja.">
   <meta name="keywords" content="digitalni marketing, web dizajn, izrada sajtova, SEO Srbija, video produkcija, logo dizajn, marketing agencija Srbija, social media, marketing strategija">
